--- a/rest_api_project/Pipfile
+++ b/rest_api_project/Pipfile
@@ -4,9 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
-psycopg2 = "*"
 djangorestframework = "*"
+django-rest-auth = "*"
+django = "==2.2"
+psycopg2 = "==2.8.6"
 
 [dev-packages]
 
